Fixed most color contrast errors on the web app

--- a/resources/styles/scss/accessibility_colors.scss
+++ b/resources/styles/scss/accessibility_colors.scss
@@ -10,3 +10,6 @@
 .black {
     color: #000000;
 }
+.dark_green_button {
+    background-color: #0C6600;
+}
